# focus-remote

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Headers/: cameraControl.hpp  configModule.hpp  serialSender.hpp
Headers/EDSDK_Header/: EDSDKTypes.h
Test/: Focus_Test.cpp  Zoom_Test.cpp
src/: CameraControl.cpp  CameraControl.h  CameraControl.hpp  EDSDKTypes.h  cameraControl.cpp  configModule.cpp  ihm.cpp  ihm.hpp  ihm.ui  main.cpp  serialSender.cpp
src/UI/: ihm.cpp  ihm.hpp  ihm.ui
